Fix z-index on nav menu

--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -107,12 +107,12 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
     position: absolute;
-    top: 105px;
+    top: -20px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
+    height: 100vh;
   }
 
   .logo {
@@ -148,12 +148,12 @@
     transform: translate(-100%, 60%);
     font-size: 1.8rem;
     cursor: pointer;
+    z-index: 3;
   }
 
   .fa-times {
     color: #fff;
     font-size: 2rem;
-    z-index: 1;
   }
 
   .nav-links-mobile {
@@ -182,9 +182,11 @@
   .navbar {
     height: 105px;
   }
+
   .navbar.active {
     height: 105px;
   }
+
   .logo {
     margin-top: 10px;
   }
